--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@supabase/supabase-js": "^2.30.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite": "^5.4.21"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.4.21"
+    "tailwindcss": "^3.4.0"
   }
 }
