--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
