--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@supabase/supabase-js": "^2.30.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite": "^5.4.21"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "vite": "^7.2.7"
   },
   "engines": {
     "node": "20.x"
